Fix css title alignment on left image (see https://github.com/restlet/restlet-marketing/issues/171)

--- a/modules/com.restlet/stylesheets/popups/modalGuide.css
+++ b/modules/com.restlet/stylesheets/popups/modalGuide.css
@@ -67,7 +67,7 @@ div.span2.section > span {
 
 .modalDialog.kinlane.guide div.doc-desc {
 	float: left;
-	margin-top: 40px;
+	margin-top: 10px;
 	margin-left: 20px;
 	margin-right: 30px;
 	width: 415px;
