--- a/modules/com.restlet/stylesheets/popups/modalKin.css
+++ b/modules/com.restlet/stylesheets/popups/modalKin.css
@@ -120,7 +120,7 @@ div.span2.section > span {
 
 .modalDialog.kinlane.kin div.doc-desc {
 	float: left;
-	margin-top: 40px;
+	margin-top: 30px;
  	margin-left: 20px;
 	margin-right: 30px;
 	width: 415px;
